@@ -3,8 +3,6 @@
 ##
 
 ## TODO: consider toggling paralithic contact to FALSE when lithic contact is TRUE
-
-
 # convert diagnostic horizon info into wide-formatted, boolean table
 diagHzLongtoWide <- function(d) {
 	
@@ -34,3 +32,29 @@ diagHzLongtoWide <- function(d) {
 	return(as.data.frame(l))
 		
 }
+
+
+## TODO: this may need some review
+## try and pick the best possible taxhistory record
+pickBestTaxHistory <- function(d) {
+	
+	# try to get the most recent:
+	d.order <- order(d$classdate, decreasing=TRUE)
+	
+	# if there are multiple (unique) dates, return the most recent
+	if(length(unique(d$classdate)) > 1) {
+		print('using most recent')
+		return(d[d.order[1]], )
+	}
+	
+	# otherwise, return the record with the least number of missing cells
+	# if there are the same number of missing cells, the first record is returned
+	n.na <- apply(d, 1, function(i) length(which(is.na(i))))
+	best.record <- which.min(n.na)
+	
+	# print('using least missing criteria')
+	return(d[best.record, ])
+}
+
+
+
